--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Website</title>
   </head>
   <body>
+    <a href="css_demo.html"> This is a link to the demo.
     <h1>BIG WORDS</h1>
     <p>These are smaller words made by Jack Chiplin</p>
   </body>
