--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <a href="css_demo.html"> This is a link to the demo.
+    <a href="font-sample.html"> This is a link to the font-sample.
     <h1>BIG WORDS</h1>
     <p>These are smaller words made by Jack Chiplin</p>
   </body>
