--- a/font-sample.html
+++ b/font-sample.html
@@ -3,15 +3,18 @@
   <head>
     <title>Font Sample</title>
     <link href="https://fonts.googleapis.com/css?family=Cairo|Luckiest+Guy|Modak&display=swap" rel="stylesheet">
-    .cairo{
-    font-family: 'Cairo', sans-serif;
-    }
-    .modak{
-    font-family: 'Modak', cursive;
-    }
-    .lucky{
-    font-family: 'Luckiest Guy', cursive;
-    }
+    <style>
+      .cairo{
+        font-family: 'Cairo', sans-serif;
+      }
+      .modak{
+        font-family: 'Modak', cursive;
+      }
+      .lucky{
+        font-family: 'Luckiest Guy', cursive;
+        font-size: 300%;
+      }
+    </style>
   </head>
   <body>
     <h1 class="lucky">BREAKING NEWS</h1>
