--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -11,6 +11,25 @@
   <body>
     <h1>Hello, world!</h1>
     <button type="button" class="btn btn-danger">Danger</button>
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          West Coast
+        </div>
+        <div class="col">
+          West Coast
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          West Coast
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          West Coast
+        </div>
+      </div>
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
