--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -39,6 +39,7 @@
         <div class="col-2">
           /
         </div>
+      </div>
       <div class="row text-center">
         <div class="col-2">
         
