--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -14,10 +14,10 @@
     <div class="container">
       <div class="row text-center">
         <div class="col-6">
-          |
+          (o)
         </div>
         <div class="col-6">
-          |
+          (o)
         </div>
       </div>
       <div class="row text-center">
@@ -44,16 +44,28 @@
         <div class="col-2">
         
         </div>
-        <div class="col-2">
+        <div class="col-1">
           _
         </div>
-        <div class="col-2">
+        <div class="col-1">
           _
         </div>
-        <div class="col-2">
+        <div class="col-1">
           _
         </div>
-        <div class="col-2">
+        <div class="col-1">
+          _
+        </div>
+        <div class="col-1">
+          _
+        </div>
+        <div class="col-1">
+          _
+        </div>
+        <div class="col-1">
+          _
+        </div>
+        <div class="col-1">
           _
         </div>
         <div class="col-2">
