--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -13,7 +13,7 @@
     <div class="container">
       <div class="row text-center">
         <div class="col-6">
-          (o)
+          <font color="red">(o)</font>
         </div>
         <div class="col-6">
           (o)
@@ -92,7 +92,7 @@
         </div>
       </div>
     </div>
-    <div class="container">
+    <div class="container-fluid">
       <img alt="spook" src="https://i.dlpng.com/static/png/5497600-creepy-smile-png-4-png-image-creepy-smile-png-420_420_preview.png"
          width=420" height="420">
     </div>           
