--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <style>
+  <style>
       body {
         background-color: #000000;
       }
     </style>
+  <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -90,7 +90,7 @@
           <font color="red">______</font>
         </div>
         <div class="col-1">
-          <font color="red">______</font>
+          <font color="red">___</font>
         </div>
         <div class="col-1">
           
@@ -98,8 +98,10 @@
       </div>
     </div>
     <div class="container-fluid">
-      <img alt="spook" src="https://i.dlpng.com/static/png/5497600-creepy-smile-png-4-png-image-creepy-smile-png-420_420_preview.png"
-         width=420" height="420">
+      <div class="col-12">
+        <img alt="spook" src="https://i.dlpng.com/static/png/5497600-creepy-smile-png-4-png-image-creepy-smile-png-420_420_preview.png"
+         width=420" height="420"> 
+      </div>
     </div>           
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
