--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -4,7 +4,7 @@
       body {
         background-color: #000000;
       }
-    </style>
+    
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -99,7 +99,7 @@
     </div>
     <div class="container-fluid">
       <div class="col-12">
-        <img alt="spook" src="https://i.dlpng.com/static/png/5497600-creepy-smile-png-4-png-image-creepy-smile-png-420_420_preview.png"
+        <img class="img-fluid" img alt="spook" src="https://i.dlpng.com/static/png/5497600-creepy-smile-png-4-png-image-creepy-smile-png-420_420_preview.png"
          width=420" height="420"> 
       </div>
     </div>           
@@ -108,4 +108,5 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
   </body>
+  </style>
 </html>
