--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -100,7 +100,7 @@
     <div class="container-fluid">
       <div class="col-12">
         <img class="img-fluid" img alt="spook" src="https://i.dlpng.com/static/png/5497600-creepy-smile-png-4-png-image-creepy-smile-png-420_420_preview.png"
-         width=420" height="420"> 
+         height="420"> 
       </div>
     </div>           
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
