--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
-  <style>
+<html lang="en"> 
+  <head>
+    <style>
       body {
         background-color: #000000;
       }
-  </style> 
-  <head>
+  
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    </style>
   </head>
   <body>
     <button type="button" class="btn btn-danger">I'm in danger</button>
@@ -99,7 +100,7 @@
     </div>
     <div class="container-fluid">
       <div class="col-12">
-        <img class="img-fluid" img alt="spook" src="https://i.dlpng.com/static/png/5497600-creepy-smile-png-4-png-image-creepy-smile-png-420_420_preview.png"
+        <img class="img-fluid" img alt="spook" src="https://i.pinimg.com/originals/80/0f/c7/800fc73f44096b738dabe5643ee48ea4.jpg"
         > 
       </div>
     </div>           
