--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"> 
   <head>
-    <style>
-      body {
-        background-color: #000000;
-      }
+    
   
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -12,6 +9,10 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    <style>
+      body {
+        background-color: #000000;
+      }
     </style>
   </head>
   <body>
@@ -99,9 +100,12 @@
       </div>
     </div>
     <div class="container-fluid">
-      <div class="col-12">
+      <div class="col-6">
         <img class="img-fluid" img alt="spook" src="https://i.pinimg.com/originals/80/0f/c7/800fc73f44096b738dabe5643ee48ea4.jpg"
         > 
+      </div>
+      <div class="col-6">
+        
       </div>
     </div>           
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
