changed description of website

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <a href="css_demo.html"> This is a link to the demo.
     <a href="font-sample.html"> This is a link to the font-sample.
     <a href="bootstrap-sample.html"> This is a link to the bootstrap-sample.
-    <h1>BIG WORDS</h1>
-    <p>These are smaller words made by Jack Chiplin</p>
+    <h1>Greetings</h1>
+    <p>Website by Jack Chiplin</p>
   </body>
 <html>
