--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <title>Website</title>
   </head>
   <body>
-    <a href="css_demo.html"> This is a link to the demo.
-    <a href="font-sample.html"> This is a link to the font-sample.
-    <a href="bootstrap-sample.html"> This is a link to the bootstrap-sample.
+    <a href="css_demo.html"> This is a link to the demo.</a>
+    <a href="font-sample.html"> This is a link to the font-sample.</a>
+    <a href="bootstrap-sample.html"> This is a link to the bootstrap-sample.</a>
     <h1>Greetings</h1>
     <p>Website by Jack Chiplin</p>
   </body>
